croppie fixed

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
     width: 50%;
     min-width: 350px;
     min-height: 465px;
-    height: 60vh;
+    height: 70vh;
     border: 1px solid;
     margin: auto;
     background-color: white;
@@ -63,7 +63,7 @@
 
 .parentBox #postCreatorModal .postCreator textarea {
 	margin: auto;
-	margin-top: 30px;
+	margin-top: 60px;
     width: 80%;
     display: block;
 }
